# PL_Project_Parallelism

./: README.md
cpp/: a.out  benchmark.cpp
haskell/: haskell-parallelism.cabal  temp_out.txt
haskell/app/: Main.hs
python/: benchmark.py
